syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "stremio/core/types/profile.proto";
import "stremio/core/types/auth_request.proto";

message Event {
  oneof type {
    ProfilePushedToStorage profile_pushed_to_storage = 1;
    LibraryItemsPushedToStorage library_items_pushed_to_storage = 2;
    StreamsPushedToStorage streams_pushed_to_storage = 3;
    SearchHistoryPushedToStorage search_history_pushed_to_storage = 4;
    NotificationsPushedToStorage notifications_pushed_to_storage = 5;
    DismissedEventsPushedToStorage dismissed_events_pushed_to_storage = 6;
    UserPulledFromAPI user_pulled_from_api = 7;
    UserPushedToAPI user_pushed_to_api = 8;
    AddonsPulledFromAPI addons_pulled_from_api = 9;
    AddonsPushedToAPI addons_pushed_to_api = 10;
    LibrarySyncWithAPIPlanned library_sync_with_api_planned = 11;
    LibraryItemsPushedToAPI library_items_pushed_to_api = 12;
    LibraryItemsPulledFromAPI library_items_pulled_from_api = 13;
    UserAuthenticated user_authenticated = 14;
    UserAddonsLocked user_addons_locked = 15;
    UserLibraryMissing user_library_missing = 16;
    UserLoggedOut user_logged_out = 17;
    UserAccountDeleted user_account_deleted = 18;
    SessionDeleted session_deleted = 19;
    TraktAddonFetched trakt_addon_fetched = 20;
    TraktLoggedOut trakt_logged_out = 21;
    AddonInstalled addon_installed = 22;
    AddonUpgraded addon_upgraded = 23;
    AddonUninstalled addon_uninstalled = 24;
    SettingsUpdated settings_updated = 25;
    LibraryItemAdded library_item_added = 26;
    LibraryItemRemoved library_item_removed = 27;
    LibraryItemRewinded library_item_rewinded = 28;
    LibraryItemNotificationsToggled library_item_notifications_toggled = 29;
    LibraryItemMarkedAsWatched library_item_marked_as_watched = 30;
    MetaItemRated meta_item_rated = 31;
    NotificationsDismissed notifications_dismissed = 32;
    PlayerPlaying player_playing = 33;
    PlayerStopped player_stopped = 34;
    PlayerNextVideo player_next_video = 35;
    PlayerEnded player_ended = 36;
    TraktPlaying trakt_playing = 37;
    TraktPaused trakt_paused = 38;
    MagnetParsed magnet_parsed = 39;
    TramvaiParsed tramvai_parsed = 40;
    PlayingOnDevice playing_on_device = 41;
    StreamingServerUrlsBucketChanged streaming_server_urls_bucket_changed = 42;
    StreamingServerUrlsPushedToStorage streaming_server_urls_pushed_to_storage = 43;
    Error error = 100;
  }

  message ProfilePushedToStorage {
    optional string uid = 1;
  }
  message LibraryItemsPushedToStorage {
    repeated string ids = 1;
  }
  message StreamsPushedToStorage {
    optional string uid = 1;
  }
  message SearchHistoryPushedToStorage {
    optional string uid = 1;
  }
  message NotificationsPushedToStorage {
    repeated string ids = 1;
  }
  message DismissedEventsPushedToStorage {
    optional string uid = 1;
  }
  message UserPulledFromAPI {
    optional string uid = 1;
  }
  message UserPushedToAPI {
    optional string uid = 1;
  }
  message AddonsPulledFromAPI {
    repeated string transport_urls = 1;
  }
  message AddonsPushedToAPI {
    repeated string transport_urls = 1;
  }
  message LibrarySyncWithAPIPlanned {
    optional string uid = 1;
    required PlanPair plan = 2;
  }
  message LibraryItemsPushedToAPI {
    repeated string ids = 1;
  }
  message LibraryItemsPulledFromAPI {
    repeated string ids = 1;
  }
  message UserAuthenticated {
    required stremio.core.types.AuthRequest auth_request = 1;
  }
  message UserAddonsLocked {
    required bool addons_locked = 1;
  }
  message UserLibraryMissing {
    required bool library_missing = 1;
  }
  message UserLoggedOut {
    optional string uid = 1;
  }
  message UserAccountDeleted {
    optional string uid = 1;
  }
  message SessionDeleted {
    required string auth_key = 1;
  }
  message TraktAddonFetched {
    optional string uid = 1;
  }
  message TraktLoggedOut {
    optional string uid = 1;
  }
  message AddonInstalled {
    required string transport_url = 1;
    required string id = 2;
  }
  message AddonUpgraded {
    required string transport_url = 1;
    required string id = 2;
  }
  message AddonUninstalled {
    required string transport_url = 1;
    required string id = 2;
  }
  message SettingsUpdated {
    required stremio.core.types.Profile.Settings settings = 1;
  }
  message LibraryItemAdded {
    required string id = 1;
  }
  message LibraryItemRemoved {
    required string id = 1;
  }
  message LibraryItemRewinded {
    required string id = 1;
  }
  message LibraryItemNotificationsToggled {
    required string id = 1;
  }
  message LibraryItemMarkedAsWatched {
    required string id = 1;
    required bool is_watched = 2;
  }
  message MetaItemRated {
    required string id = 1;
  }
  message NotificationsDismissed {
    required string id = 1;
  }
  message PlayerPlaying {
    // Empty
  }
  message PlayerStopped {
    // Empty
  }
  message PlayerNextVideo {
    // Empty
  }
  message PlayerEnded {
    // Empty
  }
  message TraktPlaying {
    // Empty
  }
  message TraktPaused {
    // Empty
  }
  message MagnetParsed {
    required string magnet = 1;
  }
  message TramvaiParsed {
    required bytes tramvai = 1;
  }
  message PlayingOnDevice {
    required string device = 1;
  }
  message StreamingServerUrlsBucketChanged {
    optional string uid = 1;
  }
  message StreamingServerUrlsPushedToStorage {
    optional string uid = 1;
  }
  message Error {
    required string error = 1;
    required Event source = 2;
  }
}

message PlanPair {
  repeated string first = 1;
  repeated string second = 2;
}